--- a/config.ini
+++ b/config.ini
@@ -20,6 +20,7 @@ folder_id =
 sheet_id = 
 
 [WhatsApp]
+send_whatsapp = True
 group_id = 
 message = :laun\t *Exciting Opportunity Alert!* :laun\t
 
